--- a/base-build/Dockerfile.mwixnet
+++ b/base-build/Dockerfile.mwixnet
@@ -13,7 +13,8 @@ RUN apt-get update && apt-get -y install cmake clang && apt-get -y install tor
 #RUN apt-get -y install libreadline-dev libncursesw5-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev zlib1g-dev
 #checkout source fresh and build
 WORKDIR /usr/src
-RUN git clone https://github.com/mimblewimble/mwixnet.git
+#RUN git clone https://github.com/mimblewimble/mwixnet.git
+RUN git clone https://github.com/wiesche89/mwixnet.git
 
 #######################
 # DEPLOY              #
